# OpenK

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: calibrate_openk_follower2.backup_20260213_225054.yaml  calibrate_openk_follower2.yaml  calibrate_openk_sts_leader.yaml  generate_torque_data.yaml  record_example.yaml  record_follower2.yaml  record_one_motor_test.yaml  record_sts_leader.yaml  replay_follower2.yaml  teleop_example.yaml  teleop_sts_leader_test.yaml  teleop_sts_leader_test2.yaml  teleop_sts_leader_test_direction.yaml  teleope_one_motor_test.yaml
docs/: README_en.md  README_zh.md  github_workflow.md  lerobot_hf_dataset_guide.md
hardware/follower/: base_link.stl  hand1_1.stl  hand2_1.stl  robot.urdf  shoulder_link1_1.stl
hardware/leader/: leader1.stl  leader2.stl  leader3.stl  leader5.stl  leader6.stl  leader7.stl  leader8.stl  leader9.stl  small-leader.step
hardware/meshes/: base_link.stl  elbow_link1_1.stl  elbow_link1_1_low.stl  elbow_link2_1.stl  elbow_link2_1_low.stl  hand1_1.stl  hand2_1.stl  shoulder_link1_1.stl  shoulder_link2_1.stl  wrist_link_1.stl  wrist_link_1_low.stl
openk/damiao/: DM_CAN.py  damiao.py
openk/sts/: STS_CAN.py  (+3 more)
scripts/: cleank_record.py  cleank_teleoperate.py  lerobot_calibrate.py  lerobot_find_joint_limits.py  lerobot_replay.py
simulation/: coffee_wipe_sim.py  robot_genesis.urdf
test/: check_segment_sampling.py  test_cleank_hil.py  test_cleank_registration.py  test_scurve_profile.py  test_smoke_flows.py
utils/: direction_map.py  log_utils.py  motion_utils.py  motor_state_table.py  scurve_profile.py
(+18 files in other folders)
